<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/idNewsView_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".view.NewsActivity">

    <!-- Toolbar -->
    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/app_bar"
            style="@style/Widget.Cows.Toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:navigationIcon="@drawable/ic_app"
            app:title="@string/app_name" />
    </com.google.android.material.appbar.AppBarLayout>

    <!-- Scroll View -->
    <ScrollView
        android:id="@+id/idScroll_newsDetail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintBottom_toTopOf="@id/idScroll_newsDetail"
        app:layout_constraintTop_toBottomOf="@+id/appBarLayout">

        <!--News content -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <!-- News Header -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <!-- Title -->
                <TextView
                    android:id="@+id/idTitle_news"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:textSize="@dimen/mtrl_navigation_item_icon_size"
                    android:text="@string/tituloNoticia"
                    android:textAppearance="?attr/textAppearanceHeadline6"
                    />

                <!-- Source and Date -->
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <!-- Source -->
                    <TextView
                        android:id="@+id/idSource_news"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="21dp"
                        android:layout_marginEnd="21dp"
                        android:layout_toLeftOf="@+id/idDate_news"
                        android:text="@string/fuente"
                        android:textAppearance="?attr/textAppearanceBody2"
                        android:textColor="?android:attr/textColorPrimary"
                        />

                    <!-- Date -->
                    <TextView
                        android:id="@+id/idDate_news"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="21dp"
                        android:layout_marginEnd="21dp"
                        android:hapticFeedbackEnabled="false"
                        android:text="@string/hora"
                        android:textAppearance="?attr/textAppearanceBody2"
                        android:textColor="?android:attr/textColorPrimary"
                        android:layout_alignParentRight="true"/>

                </RelativeLayout>
            </LinearLayout>

            <!-- News Description-->
            <WebView
                android:id="@+id/idDescription_news"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:text="@string/contenidoNoticia"
                android:textAppearance="?attr/textAppearanceBody2"
                android:textColor="?android:attr/textColorSecondary" />

        </LinearLayout>

    </ScrollView>


    <!-- Bottom Navigation -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="@id/idScroll_newsDetail"
        app:layout_constraintStart_toStartOf="@id/idScroll_newsDetail"
        app:layout_constraintBottom_toBottomOf="parent">


        <com.google.android.material.bottomnavigation.BottomNavigationView
            android:id="@+id/bottom_navigation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:menu="@menu/bottom_navigation_news_menu" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>